@@ -4,14 +4,12 @@ if (!HStateTable.Util) HStateTable.Util = {};
 HStateTable.Util = (function() {
    const _typeof = function(x) {
       if (!x) return;
-      if ((typeof x == 'object') && (x.nodeType == 1)
+      const type = typeof x;
+      if ((type == 'object') && (x.nodeType == 1)
           && (typeof x.style == 'object')
           && (typeof x.ownerDocument == 'object')) return 'element';
-      if (typeof x == 'object' && Array.isArray(x)) return 'array';
-      if (typeof x == 'number') return 'number';
-      if (typeof x == 'object') return 'object';
-      if (typeof x == 'string') return 'string';
-      return;
+      if (type == 'object' && Array.isArray(x)) return 'array';
+      return type;
    };
    const _events = [
       'onchange', 'onclick', 'ondragenter', 'ondragleave',
@@ -20,7 +18,8 @@ HStateTable.Util = (function() {
    class HtmlTiny {
       _tag(tag, attr, content) {
          const el = document.createElement(tag);
-         if (_typeof(attr) == 'object') {
+         const type = _typeof(attr);
+         if (type == 'object') {
             for (const prop of Object.keys(attr)) {
                if (_events.includes(prop)) {
                   el.addEventListener(prop.replace(/^on/, ''), attr[prop]);
@@ -28,18 +27,18 @@ HStateTable.Util = (function() {
                else { el[prop] = attr[prop]; }
             }
          }
-         else if (_typeof(attr) == 'array') { content = attr; }
-         else if (_typeof(attr) == 'element') { content = [attr]; }
-         else if (_typeof(attr) == 'string') { content = [attr]; }
-         if (content) {
-            if (_typeof(content) != 'array') content = [content];
-            for (const child of content) {
-               if (!_typeof(child)) continue;
-               if (_typeof(child) == 'number' || _typeof(child) == 'string') {
-                  el.append(document.createTextNode(child));
-               }
-               else { el.append(child); }
+         else if (type == 'array')   { content = attr; }
+         else if (type == 'element') { content = [attr]; }
+         else if (type == 'string')  { content = [attr]; }
+         if (!content) return el;
+         if (_typeof(content) != 'array') content = [content];
+         for (const child of content) {
+            const childType = _typeof(child);
+            if (!childType) continue;
+            if (childType == 'number' || childType == 'string') {
+               el.append(document.createTextNode(child));
             }
+            else { el.append(child); }
          }
          return el;
       }
@@ -111,7 +110,7 @@ HStateTable.Util = (function() {
          applyTraits: function(obj, namespace, traits, args) {
             for (const trait of traits) {
                if (!namespace[trait]) {
-                  throw new Error(`Unknown trait ${namespace} ${trait}`);
+                  throw new Error(namespace + `: Unknown trait ${trait}`);
                }
                const initialiser = namespace[trait]['initialise'];
                if (initialiser) initialiser.bind(obj)(args);
